wip: css styles added

--- a/css/main.css
+++ b/css/main.css
@@ -18,22 +18,101 @@
     /* Font */
 --Font-family-Montserrat: 'Montserrat', sans-serif;
 --Font-family-Fraunces:'Fraunces', serif;
---weight: 700;
+
+}
+html {
+  box-sizing: border-box;
 }
 
+
 body{
-  background-color: var(--Dark-cyan)
+  background-color: var(--Cream)
 }
 
 .container{
   width: 375px;
   height: 600px;
-  background-color: var(--Cream);
+  /* padding-top: 10px; */
+  background-color: var(--White);
   /* border: 3px solid black;  */
   border-radius: 15px;
   margin: auto;
 }
 
 img{
-width: 100%;
+max-width: 100%;
+border-radius: 10px 10px 0px 0px;
+/* position: relative; */
+/* top: -50%; */
+/* object-fit:cover;
+object-position: center; */
 }
+
+.text-section{
+  /* border: 2px solid red; */
+  padding-left: 20px;
+}
+
+.perfume{
+  font-family: var(--Font-family-Montserrat);
+  color: grey;
+  font-size: 12px;
+  letter-spacing: 6px;
+}
+
+h1{
+  font-size: 2.5rem;
+  margin-top: 10px;
+  line-height: .9;
+  font-family: var(--Font-family-Fraunces);
+  font-weight: var(--weight);
+}
+.body-copy{
+  font-size: .9rem;
+  margin-top: -36px;
+  color: grey;
+  font-family: var(--Font-family-Montserrat);
+  word-spacing: 2px;
+  /* border: 1px solid red; */
+  width: 86%;
+  line-height: 1.4;
+}
+ul{
+  list-style: none;
+}
+
+.price-section{
+   display: flex;
+  flex-direction: row;
+  justify-content: start; 
+  gap: 20px;
+  padding: 0;
+}
+
+li:first-child{
+  font-size: 25px;
+  font-family: var(--Font-family-Fraunces);
+  font-weight: 900;
+  color: var(--Dark-cyan);
+  
+}
+li:last-child{
+  color: grey;
+  align-self: center;
+  text-decoration: line-through;
+}
+
+.cart-btn{
+  display: flex;
+  justify-content: center;
+}
+
+button{
+  color: var(--White);
+  border: none;
+  border-radius: 5px;
+  background-color: var(--Dark-cyan);
+  font-size: 1rem;
+  width: 80%;
+  height: 50px;
+ }
