--- a/css/main.css
+++ b/css/main.css
@@ -20,57 +20,57 @@
 --Font-family-Fraunces:'Fraunces', serif;
 
 }
-html {
-  box-sizing: border-box;
-}
-
 
 body{
-  background-color: var(--Cream)
+  background-color: var(--Cream);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .container{
   width: 375px;
   height: 600px;
-  /* padding-top: 10px; */
   background-color: var(--White);
   /* border: 3px solid black;  */
   border-radius: 15px;
-  margin: auto;
+  padding-bottom: 5px;
 }
 
 img{
 max-width: 100%;
 border-radius: 10px 10px 0px 0px;
-/* position: relative; */
-/* top: -50%; */
-/* object-fit:cover;
-object-position: center; */
+
 }
 
 .text-section{
   /* border: 2px solid red; */
-  padding-left: 20px;
+  padding-left: 40px;
 }
 
 .perfume{
-  font-family: var(--Font-family-Montserrat);
-  color: grey;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 100;
+  color: var(--Dark-grayish-blue); 
   font-size: 12px;
   letter-spacing: 6px;
 }
 
 h1{
-  font-size: 2.5rem;
-  margin-top: 10px;
+  font-size: 2.1rem;
+  margin-top: 14px;
+  margin-bottom: 50px;
   line-height: .9;
   font-family: var(--Font-family-Fraunces);
   font-weight: var(--weight);
+
 }
 .body-copy{
-  font-size: .9rem;
+  font-size: 13px;
   margin-top: -36px;
-  color: grey;
+  color: var(--Dark-grayish-blue); 
   font-family: var(--Font-family-Montserrat);
   word-spacing: 2px;
   /* border: 1px solid red; */
@@ -82,15 +82,15 @@ ul{
 }
 
 .price-section{
-   display: flex;
+  display: flex;
   flex-direction: row;
   justify-content: start; 
-  gap: 20px;
+  gap: 15px;
   padding: 0;
 }
 
 li:first-child{
-  font-size: 25px;
+  font-size: 30px;
   font-family: var(--Font-family-Fraunces);
   font-weight: 900;
   color: var(--Dark-cyan);
@@ -100,11 +100,14 @@ li:last-child{
   color: grey;
   align-self: center;
   text-decoration: line-through;
+  font-size: 12px;
+  font-family: var(---Font-family-Montserrat);
 }
 
 .cart-btn{
   display: flex;
   justify-content: center;
+  
 }
 
 button{
@@ -115,4 +118,5 @@ button{
   font-size: 1rem;
   width: 80%;
   height: 50px;
+ 
  }
